--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css?family=Raleway:wght@400;700;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
    <link rel="stylesheet" href="style.css">
@@ -18,6 +20,7 @@
   <script src="scripts.js"></script>
 </head>
 <body>
+  <div id="container">
   <div id="sec1" class="sec">
     <img src="images/logo.svg">
     <div id="fileimg">
@@ -59,5 +62,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">MaryamEtesami</a>.
   </div>
+</div>
 </body>
 </html>
